syntax = "proto3";

option csharp_namespace = "Centurion.Contracts";
option go_package = "github.com/CenturionLabs/centurion/checkout-service/contracts";
option java_package = "gg.centurion.contract";

message AccountData {
  string user_name = 1;
  string password = 2;
}